--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "spfilteR"]
+	path = spfilteR
+	url = https://github.com/sjuhl/spfilter
+	shallow = true
+	registered = true
